--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="phone-container">
+        <div class="frontal-camera-container">
+            <div class="flash">
+                <div class="flash-ball"></div>
+            </div>
+            <div class="speaker"></div>
+            <div class="camera">
+                <div class="camera-ball"></div>
+            </div>
+        </div>
+    </div>
     <canvas id="game-canvas" width="320" height="480"></canvas>
     <script src="main.js"></script>
 </body>
